--- a/client/src/Style/UserManagment.css
+++ b/client/src/Style/UserManagment.css
@@ -32,7 +32,7 @@
 .allUsers_container{
     width: auto;
 	font-size: 16px;
-	background: #495C70;
+	background: #76a2ff;
 	padding: 30px 50px 15px 10px;
 	margin-top: -190px;
 	border: 5px solid #53687E;
@@ -55,7 +55,7 @@
 .form-style-4{
 	width: auto;
 	font-size: 16px;
-	background: #495C70;
+	background: #76a2ff;
 	padding: 30px 30px 15px 30px;
 	border: 5px solid #53687E;
    
@@ -67,7 +67,6 @@
 
 .form-style-4 label
 {
-	font-family: Georgia, "Times New Roman", Times, serif;
 	font-size: 16px;
 	color: #fff;
 
@@ -82,9 +81,9 @@
 }
 .form-style-4 input[type=text]
 {
-	background: transparent;
+	background:fixed;
 	border: none;
-	border-bottom: 1px dashed #83A4C5;
+	border-bottom: 1px dashed #0e0f10;
 	width: 275px;
 	outline: none;
 	padding: 0px 0px 0px 0px;
@@ -103,7 +102,7 @@
 	border: none;
 	padding: 8px 10px 8px 10px;
 	border-radius: 5px;
-	color: #A8BACE;
+	color: #f8fcf7;
 }
 .form-style-4 input[type=submit]:hover,
 .form-style-4 input[type=button]:hover{
