css and search movie

--- a/client/src/Style/Navbar.css
+++ b/client/src/Style/Navbar.css
@@ -1,6 +1,6 @@
 .NavBar_container{
 	display: flex;
-	background-color: #4e8494;
+	background-color: #76a2ff;
 	align-items: center	;
 	height: 80px;
 	justify-content: space-between;
